[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "classic-health-checks"
version = "0.0.1"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
authors = [
    {name = "Sergei Variasov", email = "variasov@gmail.com"},
]
description = "Simple health-checks"
readme = "README.md"

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings==2.6.0",
]

[project.urls]
Homepage = "https://github.com/variasov/classic-health-checks"

[project.optional-dependencies]
dev = [
    "build~=1.2.2.post1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "isort==6.0.0",
    "yapf==0.43.0",
    "flake8==7.1.1",
    "Flake8-pyproject==1.2.3",
]

[tool.setuptools.packages.find]
where = ["sources"]
